--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "eslint-config-trybe-backend": "^2.1.0",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
